--- a/index.html
+++ b/index.html
@@ -1,33 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Lexend+Deca&display=swap" rel="stylesheet">
+
+  <link rel="stylesheet" href="dist/style.css">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+
   <title>Frontend Mentor | Stats preview card component</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
+
 <body>
+  <main>
+    <section class="card container">
+      <div class="card__description">
+        <h1> Get <span>insights</span> that help <br> your business grow.</h1>
+        <p>
+          Discover the benefits of data analytics and make <br> better decisions regarding revenue, customer <br>
+          experience, and overall efficiency.
+        </p>
 
-  Get insights that help your business grow.
+        <div class="card__stats">
+          <div class="card__stats_item">
+            <h2>10k+</h2>
+            <p>templates</p>
+          </div>
+          <div class="card__stats_item">
+            <h2>314</h2>
+            <p>templates</p>
+          </div>
+          <div class="card__stats_item">
+            <h2>12M+</h2>
+            <p>queries</p>
+          </div>
+        </div>
+      </div>
 
-  Discover the benefits of data analytics and make better decisions regarding revenue, customer 
-  experience, and overall efficiency.
-
-  10k+ companies
-  314 templates
-  12m+ queries
-
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+      <div class="card__img"><img src="/images/image-header-desktop.jpg" alt=""></div>
+    </section>
+  </main>
 </body>
+
 </html>
