add mobile style

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <main>
     <section class="card container">
       <div class="card__description">
-        <h1> Get <span>insights</span> that help <br> your business grow.</h1>
+        <h1> Get <span>insights</span> that help your business grow.</h1>
         <p>
           Discover the benefits of data analytics and make <br> better decisions regarding revenue, customer <br>
           experience, and overall efficiency.
@@ -29,7 +29,7 @@
         <div class="card__stats">
           <div class="card__stats_item">
             <h2>10k+</h2>
-            <p>templates</p>
+            <p>companies</p>
           </div>
           <div class="card__stats_item">
             <h2>314</h2>
@@ -42,7 +42,9 @@
         </div>
       </div>
 
-      <div class="card__img"><img src="/images/image-header-desktop.jpg" alt=""></div>
+      <div class="card__img">
+        <img src="/images/image-header-desktop.jpg" alt="">
+      </div>
     </section>
   </main>
 </body>
